--- a/notebooks/examine_historical.ipynb
+++ b/notebooks/examine_historical.ipynb
@@ -12,6 +12,7 @@
     "import re\n",
     "from datetime import datetime\n",
     "from typing import List, Tuple, Union\n",
+    "from functools import cache\n",
     "\n",
     "import instaloader\n",
     "import numpy as np\n",
@@ -636,57 +637,55 @@
     "    'euclidean': euclidean_distances\n",
     "}\n",
     "\n",
-    "for METHOD in ['roberta', 'tfidf', 'bow']:\n",
-    "    for USERNAME in ['espn', 'pubitysport', 'enews', 'forbes', 'bloomberg']:\n",
-    "        for SIMILARITY in SIMILARITIES.keys():\n",
-    "            for N_PER_DATE in [1,5]:\n",
+    "for USERNAME in ['espn', 'pubitysport', 'enews', 'forbes', 'bloomberg']:\n",
+    "    for START, END in PERIODS:\n",
+    "        try:\n",
+    "            START, END = datetime.strptime(START, '%m/%d/%Y'), datetime.strptime(END, '%m/%d/%Y')\n",
+    "            profile_path = os.path.join(ROOT, USERNAME)\n",
+    "            text_files = [\n",
+    "                os.path.join(profile_path, file)\n",
+    "                for file in os.listdir(profile_path)\n",
+    "                if file.endswith(\"UTC.txt\")\n",
+    "                and datetime(year=2000, month=1, day=1) < \n",
+    "                datetime.strptime(os.path.basename(file), \"%Y-%m-%d_%H-%M-%S_UTC.txt\")\n",
+    "                < START\n",
+    "            ]\n",
+    "            for METHOD in ['roberta', 'tfidf', 'bow']:\n",
+    "                # Calculate time to vectorize, and time to embed\n",
+    "                # Also calculate number of posts in that timeframe\n",
+    "                # Use Bloomberg as an example week \n",
+    "                vectorizer = Vectorizer(how=METHOD)\n",
+    "                start = time.time()\n",
+    "                vectorizer.fit(text_files)\n",
+    "                end = time.time()\n",
+    "                vectorization_time = end - start \n",
+    "                \n",
+    "                prev_posts = get_posts(USERNAME, ROOT, get_before=START)\n",
+    "                posts = get_posts(USERNAME, ROOT, get_before=END, get_after=START)\n",
+    "                articles = google_trends[(google_trends['Date'] >= START) & (google_trends['Date'] <= END)]\n",
+    "                \n",
+    "                start = time.time()\n",
+    "                tqdm.pandas(desc=\"Embed previous captions\")\n",
+    "                prev_posts[\"embeddings\"] = prev_posts[\"caption\"].progress_apply(vectorizer.transform)\n",
+    "                end = time.time()\n",
+    "                embed_captions_time = end - start \n",
+    "                \n",
+    "                start = time.time()\n",
+    "                tqdm.pandas(desc=\"Embed articles\")\n",
+    "                articles[\"embeddings\"] = articles[\"article_content\"].progress_apply(vectorizer.transform)\n",
+    "                end = time.time()\n",
+    "                embed_articles_time = end - start \n",
     "                for EMBEDDING_METRIC in ['weighted', 'mean']:\n",
-    "                    for START, END in PERIODS:\n",
-    "                        print(USERNAME, METHOD, SIMILARITY, EMBEDDING_METRIC, N_PER_DATE, START, END)\n",
-    "                        try:\n",
-    "                            START, END = datetime.strptime(START, '%m/%d/%Y'), datetime.strptime(END, '%m/%d/%Y')\n",
-    "                            profile_path = os.path.join(ROOT, USERNAME)\n",
-    "                            text_files = [\n",
-    "                                os.path.join(profile_path, file)\n",
-    "                                for file in os.listdir(profile_path)\n",
-    "                                if file.endswith(\"UTC.txt\")\n",
-    "                                and datetime(year=2000, month=1, day=1) < \n",
-    "                                datetime.strptime(os.path.basename(file), \"%Y-%m-%d_%H-%M-%S_UTC.txt\")\n",
-    "                                < START\n",
-    "                            ]\n",
-    "                            \n",
-    "                            # Calculate time to vectorize, and time to embed\n",
-    "                            # Also calculate number of posts in that timeframe\n",
-    "                            # Use Bloomberg as an example week \n",
-    "                            vectorizer = Vectorizer(how=METHOD)\n",
-    "                            start = time.time()\n",
-    "                            vectorizer.fit(text_files)\n",
-    "                            end = time.time()\n",
-    "                            vectorization_time = end - start \n",
-    "                            \n",
-    "                            prev_posts = get_posts(USERNAME, ROOT, get_before=START)\n",
-    "                            posts = get_posts(USERNAME, ROOT, get_before=END, get_after=START)\n",
-    "                            articles = google_trends[(google_trends['Date'] >= START) & (google_trends['Date'] <= END)]\n",
-    "                            \n",
-    "                            start = time.time()\n",
-    "                            tqdm.pandas(desc=\"Embed previous captions\")\n",
-    "                            prev_posts[\"embeddings\"] = prev_posts[\"caption\"].progress_apply(vectorizer.transform)\n",
-    "                            embedding = calc_embedding(prev_posts, how=EMBEDDING_METRIC)\n",
-    "                            end = time.time()\n",
-    "                            embed_captions_time = end - start \n",
-    "                            \n",
-    "                            start = time.time()\n",
-    "                            tqdm.pandas(desc=\"Embed articles\")\n",
-    "                            articles[\"embeddings\"] = articles[\"article_content\"].progress_apply(vectorizer.transform)\n",
-    "                            end = time.time()\n",
-    "                            embed_articles_time = end - start \n",
-    "                            \n",
-    "                            articles[\"similarity\"] = articles[\"embeddings\"].apply(\n",
-    "                                lambda x: SIMILARITIES[SIMILARITY](embedding, x)[0][0]\n",
-    "                            )\n",
-    "                            \n",
+    "                    embedding = calc_embedding(prev_posts, how=EMBEDDING_METRIC)\n",
+    "                \n",
+    "                    for SIMILARITY in SIMILARITIES.keys():\n",
+    "                        articles[\"similarity\"] = articles[\"embeddings\"].apply(\n",
+    "                            lambda x: SIMILARITIES[SIMILARITY](embedding, x)[0][0]\n",
+    "                        )\n",
+    "                        \n",
+    "                        for N_PER_DATE in [1,5]:\n",
     "                            # Get top posts per day and calculate jaccard \n",
-    "                            top_k = articles.loc[articles.groupby(articles[\"Date\"])[\"similarity\"].nlargest(1).index.levels[1]]\n",
+    "                            top_k = articles.loc[articles.groupby(articles[\"Date\"])[\"similarity\"].nlargest(N_PER_DATE).index.levels[1]]\n",
     "                            \n",
     "                            article_text = top_k['article_content'].str.cat(sep=' ')\n",
     "                            posts_text = posts['caption'].str.cat(sep=' ')\n",
@@ -710,9 +709,17 @@
     "                            })\n",
     "                            pd.DataFrame(results).to_csv(\"FINAL_RESULTS.csv\")\n",
     "                            print(results[-1])\n",
-    "                        except Exception as E:\n",
-    "                            print(f\"Failed to calculate Jaccard: {E}\")"
+    "        except Exception as E:\n",
+    "            print(f\"Failed to calculate Jaccard: {E}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e663645-6605-4d5d-853d-97a489a3a1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
