Removed file location

--- a/NLP_Analysis.ipynb
+++ b/NLP_Analysis.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r\"C:\\Users\\aryan\\OneDrive\\Desktop\\NYU-DSGA1011\\Project\\Results.csv\")"
+    "data = pd.read_csv(r\"Results.csv\")"
    ]
   },
   {
